--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,13 @@
 <androidx.fragment.app.FragmentContainerView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_container"
     android:layout_width="match_parent"
-    android:name="com.example.composition.presentation.screens.welcome.WelcomeFragment"
+    android:name="androidx.navigation.fragment.NavHostFragment"
     android:layout_height="match_parent"
+    app:navGraph="@navigation/main_navigation"
     tools:context=".presentation.MainActivity"
+    app:defaultNavHost="true"
     tools:layout="@layout/fragment_welcome"
     />
