--- a/app/src/main/res/layout/fragment_game_result.xml
+++ b/app/src/main/res/layout/fragment_game_result.xml
@@ -1,79 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".presentation.screens.result.GameResultFragment">
+<layout>
 
-    <ImageView
-        android:id="@+id/emoji_result"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="48dp"
-        android:contentDescription="@string/game_over"
-        app:layout_constraintBottom_toTopOf="@id/text_view_required_answers"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/ic_smile" />
+    <data>
+        <variable
+            name="gameResult"
+            type="com.example.composition.domain.entities.GameResult" />
+    </data>
 
-    <TextView
-        android:id="@+id/text_view_required_answers"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/required_score"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@id/text_view_score_answers"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        android:layout_height="match_parent"
+        tools:context=".presentation.screens.result.GameResultFragment">
 
-    <TextView
-        android:id="@+id/text_view_score_answers"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/score_answers"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@id/text_view_required_percentage"
-        app:layout_constraintEnd_toEndOf="@id/text_view_required_answers"
-        app:layout_constraintStart_toStartOf="@id/text_view_required_answers"
-        app:layout_constraintTop_toBottomOf="@id/text_view_required_answers" />
+        <ImageView
+            android:id="@+id/emoji_result"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="48dp"
+            android:contentDescription="@string/game_over"
+            app:emojiResult="@{gameResult.winner}"
+            app:layout_constraintBottom_toTopOf="@id/text_view_required_answers"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@drawable/ic_smile" />
 
-    <TextView
-        android:id="@+id/text_view_required_percentage"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/required_percentage"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@id/text_view_score_percentage"
-        app:layout_constraintEnd_toEndOf="@id/text_view_required_answers"
-        app:layout_constraintStart_toStartOf="@id/text_view_required_answers"
-        app:layout_constraintTop_toBottomOf="@id/text_view_score_answers"
-        app:layout_constraintVertical_chainStyle="packed" />
+        <TextView
+            android:id="@+id/text_view_required_answers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:textSize="18sp"
+            app:requiredAnswer="@{gameResult.gameSettings.minCountOfRightAnswers}"
+            app:layout_constraintBottom_toTopOf="@id/text_view_score_answers"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed" />
 
-    <TextView
-        android:id="@+id/text_view_score_percentage"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/score_percentage"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/text_view_required_answers"
-        app:layout_constraintStart_toStartOf="@id/text_view_required_answers"
-        app:layout_constraintTop_toBottomOf="@id/text_view_required_percentage"
-        />
+        <TextView
+            android:id="@+id/text_view_score_answers"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            app:scoredAnswer="@{gameResult.countOfRightAnswers}"
+            app:layout_constraintBottom_toTopOf="@id/text_view_required_percentage"
+            app:layout_constraintEnd_toEndOf="@id/text_view_required_answers"
+            app:layout_constraintStart_toStartOf="@id/text_view_required_answers"
+            app:layout_constraintTop_toBottomOf="@id/text_view_required_answers" />
 
-    <Button
-        android:id="@+id/button_retry"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/retry"
-        android:layout_margin="16dp"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        <TextView
+            android:id="@+id/text_view_required_percentage"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:textSize="18sp"
+            app:requiredPercentage="@{gameResult.gameSettings.minPercentOfRightAnswers}"
+            app:layout_constraintBottom_toTopOf="@id/text_view_score_percentage"
+            app:layout_constraintEnd_toEndOf="@id/text_view_required_answers"
+            app:layout_constraintStart_toStartOf="@id/text_view_required_answers"
+            app:layout_constraintTop_toBottomOf="@id/text_view_score_answers"
+            app:layout_constraintVertical_chainStyle="packed" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/text_view_score_percentage"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:textSize="18sp"
+            app:scorePercentage="@{gameResult}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/text_view_required_answers"
+            app:layout_constraintStart_toStartOf="@id/text_view_required_answers"
+            app:layout_constraintTop_toBottomOf="@id/text_view_required_percentage" />
+
+        <Button
+            android:id="@+id/button_retry"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:text="@string/retry"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
