--- a/app/src/main/res/layout/fragment_choose_level.xml
+++ b/app/src/main/res/layout/fragment_choose_level.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+    <layout>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -44,3 +45,4 @@
         android:text="@string/hard_level" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
+</layout>
