--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,154 +1,177 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <layout>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".presentation.screens.game.GameFragment">
+<layout>
 
-    <TextView
-        android:id="@+id/text_view_timer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="10dp"
-        android:textColor="@color/timer_color"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="00:00" />
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.composition.presentation.screens.game.GameViewModel" />
+    </data>
 
-    <TextView
-        android:id="@+id/text_view_sum"
-        style="@style/QuestionTextStyle"
-        android:layout_width="144dp"
-        android:layout_height="144dp"
-        android:background="@drawable/circle_background"
-        app:layout_constraintBottom_toTopOf="@id/text_view_left_number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        tools:text="10"
-        />
-
-    <TextView
-        android:id="@+id/text_view_left_number"
-        style="@style/QuestionTextStyle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@color/green"
-        app:layout_constraintBottom_toTopOf="@id/text_view_option_1"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toStartOf="@id/text_view_question"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_view_sum"
-        tools:text="7"
-        />
-
-    <TextView
-        android:id="@+id/text_view_question"
-        style="@style/QuestionTextStyle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@color/green"
-        android:text="@string/question_mark"
-        app:layout_constraintBottom_toBottomOf="@id/text_view_left_number"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/text_view_left_number"
-        app:layout_constraintTop_toTopOf="@id/text_view_left_number"
-        />
-
-    <TextView
-        android:id="@+id/text_view_option_1"
-        android:layout_width="0dp"
-        style="@style/OptionTextStyle"
-        android:layout_height="wrap_content"
-        android:background="@android:color/holo_green_light"
-        app:layout_constraintEnd_toStartOf="@+id/text_view_option_2"
-        app:layout_constraintBottom_toTopOf="@+id/text_view_option_4"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="1"/>
-
-    <TextView
-        android:id="@+id/text_view_option_2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        style="@style/OptionTextStyle"
-        android:background="@android:color/holo_orange_light"
-        app:layout_constraintBottom_toTopOf="@+id/text_view_option_5"
-        app:layout_constraintEnd_toStartOf="@+id/text_view_option_3"
-        app:layout_constraintStart_toEndOf="@+id/text_view_option_1"
-        tools:text="2"/>
-
-    <TextView
-        android:id="@+id/text_view_option_3"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        style="@style/OptionTextStyle"
-        android:background="@android:color/holo_purple"
-        app:layout_constraintStart_toEndOf="@+id/text_view_option_2"
-        app:layout_constraintBottom_toTopOf="@+id/text_view_option_6"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:text="3"/>
-
-    <TextView
-        android:id="@+id/text_view_option_4"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@android:color/holo_blue_light"
-        style="@style/OptionTextStyle"
-        app:layout_constraintEnd_toStartOf="@+id/text_view_option_5"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="4"/>
-
-    <TextView
-        android:id="@+id/text_view_option_5"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        style="@style/OptionTextStyle"
-        android:background="@android:color/holo_red_light"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/text_view_option_6"
-        app:layout_constraintStart_toEndOf="@+id/text_view_option_4"
-        tools:text="5"/>
-
-    <TextView
-        android:id="@+id/text_view_option_6"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        style="@style/OptionTextStyle"
-        android:background="@android:color/holo_blue_bright"
-        app:layout_constraintStart_toEndOf="@+id/text_view_option_5"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:text="6"/>
-
-    <TextView
-        android:id="@+id/text_view_answers_progress"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/progress_answers"
-        android:layout_margin="16dp"
-        app:layout_constraintVertical_chainStyle="spread"
-        app:layout_constraintTop_toBottomOf="@id/text_view_left_number"
-        app:layout_constraintBottom_toTopOf="@id/progress_bar" />
+        android:layout_height="match_parent"
+        tools:context=".presentation.screens.game.GameFragment">
 
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:max="100"
-        android:secondaryProgressTint="@android:color/background_dark"
-        app:layout_constraintBottom_toTopOf="@+id/text_view_option_2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_view_answers_progress" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/text_view_timer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="10dp"
+            android:textColor="@color/timer_color"
+            android:text="@{viewModel.formattedTime}"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="00:00" />
+
+        <TextView
+            android:id="@+id/text_view_sum"
+            style="@style/QuestionTextStyle"
+            android:layout_width="144dp"
+            android:layout_height="144dp"
+            android:background="@drawable/circle_background"
+            app:numberAsText="@{viewModel.question.sum}"
+            app:layout_constraintBottom_toTopOf="@id/text_view_left_number"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:text="10" />
+
+        <TextView
+            android:id="@+id/text_view_left_number"
+            style="@style/QuestionTextStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@color/green"
+            app:numberAsText="@{viewModel.question.visibleNumber}"
+            app:layout_constraintBottom_toTopOf="@id/text_view_option_1"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toStartOf="@id/text_view_question"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_view_sum"
+            tools:text="7" />
+
+        <TextView
+            android:id="@+id/text_view_question"
+            style="@style/QuestionTextStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@color/green"
+            android:text="@string/question_mark"
+            app:layout_constraintBottom_toBottomOf="@id/text_view_left_number"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/text_view_left_number"
+            app:layout_constraintTop_toTopOf="@id/text_view_left_number" />
+
+        <TextView
+            android:id="@+id/text_view_option_1"
+            android:layout_width="0dp"
+            style="@style/OptionTextStyle"
+            android:layout_height="wrap_content"
+            android:background="@android:color/holo_green_light"
+            android:text="@{viewModel.question.options.get(0).toString()}"
+            app:onOptionClickListener="@{(option) -> viewModel.chooseAnswer(option)}"
+            app:layout_constraintEnd_toStartOf="@+id/text_view_option_2"
+            app:layout_constraintBottom_toTopOf="@+id/text_view_option_4"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="1" />
+
+        <TextView
+            android:id="@+id/text_view_option_2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            style="@style/OptionTextStyle"
+            android:background="@android:color/holo_orange_light"
+            android:text="@{viewModel.question.options.get(1).toString()}"
+            app:onOptionClickListener="@{(option) -> viewModel.chooseAnswer(option)}"
+            app:layout_constraintBottom_toTopOf="@+id/text_view_option_5"
+            app:layout_constraintEnd_toStartOf="@+id/text_view_option_3"
+            app:layout_constraintStart_toEndOf="@+id/text_view_option_1"
+            tools:text="2" />
+
+        <TextView
+            android:id="@+id/text_view_option_3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            style="@style/OptionTextStyle"
+            android:background="@android:color/holo_purple"
+            android:text="@{viewModel.question.options.get(2).toString()}"
+            app:onOptionClickListener="@{(option) -> viewModel.chooseAnswer(option)}"
+            app:layout_constraintStart_toEndOf="@+id/text_view_option_2"
+            app:layout_constraintBottom_toTopOf="@+id/text_view_option_6"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="3" />
+
+        <TextView
+            android:id="@+id/text_view_option_4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@android:color/holo_blue_light"
+            android:text="@{viewModel.question.options.get(3).toString()}"
+            app:onOptionClickListener="@{(option) -> viewModel.chooseAnswer(option)}"
+            style="@style/OptionTextStyle"
+            app:layout_constraintEnd_toStartOf="@+id/text_view_option_5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="4" />
+
+        <TextView
+            android:id="@+id/text_view_option_5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            style="@style/OptionTextStyle"
+            android:background="@android:color/holo_red_light"
+            android:text="@{viewModel.question.options.get(4).toString()}"
+            app:onOptionClickListener="@{(option) -> viewModel.chooseAnswer(option)}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/text_view_option_6"
+            app:layout_constraintStart_toEndOf="@+id/text_view_option_4"
+            tools:text="5" />
+
+        <TextView
+            android:id="@+id/text_view_option_6"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            style="@style/OptionTextStyle"
+            android:background="@android:color/holo_blue_bright"
+            android:text="@{viewModel.question.options.get(5).toString()}"
+            app:onOptionClickListener="@{(option) -> viewModel.chooseAnswer(option)}"
+            app:layout_constraintStart_toEndOf="@+id/text_view_option_5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="6" />
+
+        <TextView
+            android:id="@+id/text_view_answers_progress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@{viewModel.progressAnswers}"
+            android:layout_margin="16dp"
+            app:enoughCount="@{viewModel.enoughCountOfRightAnswers}"
+            app:layout_constraintVertical_chainStyle="spread"
+            app:layout_constraintTop_toBottomOf="@id/text_view_left_number"
+            app:layout_constraintBottom_toTopOf="@id/progress_bar" />
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:max="100"
+            android:secondaryProgressTint="@android:color/background_dark"
+            android:progress="@{viewModel.percentOfRightAnswers}"
+            android:secondaryProgress="@{viewModel.minPercent}"
+            app:enoughPercent="@{viewModel.enoughPercentOfRightAnswers}"
+            app:layout_constraintBottom_toTopOf="@+id/text_view_option_2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_view_answers_progress" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
